# src/router/index.js
@@ -10,5 +10,6 @@ router.use("/auth", auth);
 router.use("/requests", requests);
 router.use("/booking", booking);
 router.use("/user", user);
+router.use("/uploader", uploader);
 
 module.exports = router;
